# pymscada

./: .cursorignore  .cursorrules  .gitignore  BUILD.md  LICENSE  MANIFEST.in  README.md  boilerplate.txt  copilot-instructions.md  copilot-roadmap.md  pyproject.toml  report.coverage  workflow_plan.md  working_plan.md
.cursor/rules/: jamie.mdc  venv.mdc
docs/: BUILD.md  Debian.md  Dev Environment.md  Development.md  Initial Build.md  README.md  Road Map.md  Running Mobile SCADA.md  adding_modules.md  apache.md  debian.md  debian_demo.md  debian_dev.md  debian_development.md  debian_quickstart.md  initial_build.md  modbus_plc_demo.md  module_list.md  policies.md  raised errors.md  raised_errors.md  raspberry_demo.md  road_map.md  running_pymscada.md  symphony.md  tags.md  tds.md  temp.md  weather.md  windows_demo.md
docs/examples/: bus.yaml  files.yaml  history.yaml  pymscada-bus.service  pymscada-files.service  pymscada-history.service  pymscada-simulate.service  pymscada-wwwserver.service  simulate.yaml  tags.yaml  wwwserver.yaml
src/pymscada/: __init__.py  __main__.py  alarms.py  app.py  bus_client.py  bus_client_tag.py  bus_misc.py  bus_server.py  callout.py  checkout.py  config.py  console.py  files.py  history.py  kalman_filter.py  main.py  math.py  matrix.py  misc.py  modbus_client.py  modbus_map.py  modbus_server.py  module_config.py  module_template.py  mp_control.py  observer.py  opnotes.py  periodic.py  protocol_constants.py  samplers.py  simulate.py  sms.py  tag.py  validate.py  www_server.py
src/pymscada/demo/: README.md  __init__.py  accuweather.yaml  alarms.yaml  callout.yaml  files.yaml  history.yaml  logixclient.yaml  math.yaml  modbus_plc.py  modbusclient.yaml  modbusserver.yaml  mp_control.yaml  observer.yaml  openweather.yaml  opnotes.yaml  piapi.yaml  piapiclient.yaml  ping.yaml  (+33 more)
tests/: bus_echo.py  test_alarms.py  test_bus_client.py  test_bus_client_tag.py  test_bus_server.py  test_callout.py  test_config.py  test_history.py  test_kalman.py  test_math.py  test_matrix.py  test_misc.py  test_modbus.py  test_mp_control.py  test_observer.py  test_openweather.py  test_opnotes.py  test_periodic.py  test_samplers.py  test_sms.py  test_tag.py  test_tag_history.py  test_validate.py
tests/iodrivers/: test_logix.py  test_modbus.py  test_modbus_realplc.py  test_openweather.py  test_piapi.py  test_piapi_client.py  test_wits.py
tests/milp/: test_basic.py  test_kalman.py  test_matrix.py  test_misc.py  test_model.py  test_model_hyd.py
tests/test_assets/: alarms.sqlite-journal  busserver.yaml  db.sqlite
tmp/: README.md
(+44 files in other folders)
