[project]
name = "pymscada"
version = "0.2.0rc1"
description = "Shared tag value SCADA with python backup and Angular UI"
authors = [
    {name = "Jamie Walton", email = "jamie@walton.net.nz"},
]
dependencies = [
    "PyYAML>=6.0.1",          # all
    "aiohttp>=3.8.5",         # www_server
    "pymscada-html==0.2.0rc1",   # www_server
    "cerberus>=1.3.5",        # validate
    "pycomm3>=1.2.14",        # logix_client
    "pysnmplib>=5.0.24",      # DON'T use pysnmp, dead
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: JavaScript",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Development Status :: 1 - Planning",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.2",
    "flake8>=6.1.0",
    "flake8-docstrings>=1.7.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0"
]
pdm = []

[tool.coverage.run]
omit = [
    'tests/*',
]

[project.scripts]
pymscada = "pymscada.__main__:cmd_line"

[project.urls]
"Homepage" = "https://github.com/jamie0walton/pymscada"
"Bug Tracker" = "https://github.com/jamie0walton/pymscada/issues"

[tool.pytest.ini_options]
addopts = "-v -s"
